Added Material Design inspired theme