@@ -1,1 +1,2 @@
-Added Material Design inspired theme
+Updated Styles
+Updated Dashboard to interact correctly with ebook history entries.
